fix spacing on idx page

--- a/app/scss/idx.css
+++ b/app/scss/idx.css
@@ -43,7 +43,7 @@
     margin-left: 2rem;
 }
 
-.title, .epigraph {
+.title, .epigraph, .about, .socials, .projects {
     margin-bottom: 2rem;
 }
 
